# catalogo_peru

./: README.md  pyproject.toml
PE___DDC_CWICR/: DDC_CWICR_PE_LIMA_Catalog.csv  PE_LIMA_catalog.csv
data/: partidas_extraidas.json  partidas_peru.py
data/sql/: Capeco.sqlite  vivienda_proyecto_final.sqlite
scripts/: build_parquet.py  extract_from_sqlite.py  update_precios.py
src/ocerp_peru/: __init__.py  cwicr_catalogue.py  manifest.py  onboarding.yaml  seed_catalog.py
src/ocerp_peru/locales/: es-PE.json
src/ocerp_peru/rule_packs/rne_2024/: rules.json
src/ocerp_peru/rule_packs/sencico_costos/: rules.json
